<resources>
    <string name="app_name">فروشگاه حسن باقری</string>
    <string name="profile">profile</string>
    <string name="home">خانه</string>
    <string name="shop">سبد خرید</string>
    <string name="home_">پروفایل</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="callme">تماس با ما</string>
    <string name="error">گزارش خطا</string>
    <string name="aboutme">درباره ما</string>
    <string name="porsesh">پرسش های متداول</string>
    <string name="shop_bagheri">فروشگاه باقری</string>
    <string name="price">13000</string>
    <string name="more">بیشتر</string>
    <string name="description">مهمترین هدف ما در این شرکت ، رضایت مشتری و پشتیبانی بی قید و شرط ، سریع و راحت می باشد ، به همین دلیل روش های ارتباطی متنوعی پیش بینی شده است که می توانید بسته به شرایط خودتان و با توجه به سوال و حسب نیاز از آنها استفاده کنید</string>
    <string name="socialNetwork">مارا درشبکه های اجتماعی  دنبال کنید</string>
    <string name="text">توضیحات</string>
    <string name="buy">افزودن به سبد خرید</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">ورود</string>
    <string name="rules">قوانین را مطالعه کردم و قبول دارم</string>
    <string name="view_rules">قوانین</string>
    <string name="daneshjooyar_shop">فروشگاه حسن باقری</string>
    <string name="name">username</string>
    <string name="register">ورود</string>
    <string name="exit">خروج</string>
    <string name="comments">نظرات کاربران :</string>
    <string name="price2">قیمت :</string>
    <string name="discount">تخفیفات داغ</string>
    <string name="clear">خالی کردن سبد خرید</string>

</resources>